[project]
name = "formfill-env"
version = "0.1.0"
description = "OpenEnv form filling environment"
authors = [
    { name = "Himanshu" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
start = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
